# MediaCodecUse

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFmpegH264Decoder.cpp  FFmpegH264Decoder.h  Log.h  PushInterface.h  RotateNV_UV.cpp  RtmpHandler.cpp  RtmpHandler.h  X264Handle.cpp  X264Handle.h  YuvUtil.cpp  YuvUtil.h  nativeMedia.cpp  nativeYuvUtil.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/aniljing/mediacodecuse/: LogUtils.java  MainActivity.java  MediaCodecEncoderActivity.java  X264CodecActivity.java
app/src/main/java/com/aniljing/mediacodecuse/camera2/: BaseCameraProvider.java  Camera2ProviderPreviewWithYUV.java  CameraUtil.java  GlUtil.java  Texture2dProgram.java
app/src/main/java/com/aniljing/mediacodecuse/codec/: CodecH264Decoder.java  CodecH264Encoder.java
app/src/main/java/com/aniljing/mediacodecuse/utils/: LogUtils.java  MediaUtil.java  Orientation.java  RTMPConnectState.java  YUVTools.java  YuvUtil.java
app/src/main/jniLibs/include/libavcodec/: avcodec.h
app/src/main/jniLibs/include/libavfilter/: avfilter.h
app/src/main/jniLibs/include/libavformat/: avformat.h
app/src/main/jniLibs/include/libavutil/: bprint.h  encryption_info.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_vulkan.h
app/src/main/res/layout/: activity_main.xml  activity_media_codec_encoder.xml  activity_x264_codec.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
